  * Add myself to uploaders.
  * Bump standards version to 3.9.1.
  * Switch to source format 3.0, drop quilt from control and rules.
  * Drop patches:
    - 10_disable_cache (does not apply anymore)
    - 45_increase_canon_timeout (upstream has increased it from 150 to 500)

  [ David Paleino ]
  * debian/rules:
    - fix typo (s,deibian,debian,)
    - simplify override_dh_auto_configure

 -- David Paleino <dapal@debian.org>  Thu, 11 Nov 2010 09:45:58 +0100

libgphoto2 (2.4.6-3) unstable; urgency=low

  * Merge one more patch by Martin Pitt (thanks!): move HAL FDI
    creation from debian/libgphoto2-2.postinst to debian/rules.
    This avoids problems with half-configured libraries during
    upgrade/installation (LP: #352271, Closes: #531979)
  * Remove old conffiles. We can't use dpkg-maintscript-helper,
    because they were created at install-time and thus not marked
    as conffiles. (Closes: #461397, #511129)
  * Move from /etc/udev/rules.d/ to /lib/udev/rules.d should now
    be complete (Closes: #586668)

 -- David Paleino <dapal@debian.org>  Wed, 10 Nov 2010 10:26:49 +0100

libgphoto2 (2.4.6-2) unstable; urgency=low

  * Merge Ubuntu patches, by Martin Pitt (thanks!):
    - Update Build-Depends: Move from libltdl3-dev to libltdl-dev
      (Closes: #531974).
    - Create modern udev rules at build-time instead of at install-time
      thanks to a patch sent (and now merged) upstream. Drop a lot of
      code from libgphoto2-2.postinst accordingly, while adding the
      generation code to debian/rules. Also bump the versioned dependency
      on udev from 0.113-1 to 0.136 (Closes: #531978).
  * Added myself to Uploaders

 -- David Paleino <dapal@debian.org>  Mon, 08 Nov 2010 11:19:51 +0100

libgphoto2 (2.4.6-1) unstable; urgency=low

  * New upstream release.
  * Fix FTBFS on GNU/kFreeBSD, thanks to Aurélien Jarno (Closes: #528380):
     - Only install udev-related files on Linux architectures.