@@ -64,13 +64,10 @@ override_dh_makeshlibs:
 override_dh_shlibdeps:
 	dh_shlibdeps -ldebian/libgphoto2-$(major)/usr/lib/:debian/libgphoto2-port0/usr/lib/
 
-override_dh_gencontrol:
-	dh_gencontrol -plibgphoto2-$(major)-dev
-	dh_gencontrol -plibgphoto2-port0
 ifeq (linux,$(DEB_HOST_ARCH_OS))
+override_dh_gencontrol:
+	dh_gencontrol
 	dh_gencontrol -plibgphoto2-$(major) -- -Vudev-hotplug='udev (>= 0.136)'
-else
-	dh_gencontrol -plibgphoto2-$(major)
 endif
 
 %:
